erDiagram
    USUARIO ||--o{ EQUIPO : "crea"
    USUARIO ||--o{ NOTIFICACION : "recibe"
    USUARIO ||--o{ SOLICITUD : "candidato"
    USUARIO ||--o{ SOLICITUD : "decisor"
    USUARIO ||--o{ TORNEO : "organiza"

    EQUIPO ||--|| USUARIO : "creador"
    EQUIPO ||--o{ EQUIPO_MIEMBROS : "tiene"
    EQUIPO_MIEMBROS ||--|| USUARIO : "miembro"
    EQUIPO ||--o{ SOLICITUD : "recibe"
    EQUIPO ||--o{ INSCRIPCION : "participa"
    EQUIPO ||--o{ ENCUENTRO : "local"
    EQUIPO ||--o{ ENCUENTRO : "visitante"

    TORNEO ||--o{ GRUPO : "posee"
    TORNEO ||--o{ JORNADA : "planifica"
    TORNEO ||--o{ INSCRIPCION : "gestiona"

    GRUPO ||--o{ INSCRIPCION : "agrupa"

    JORNADA ||--o{ ENCUENTRO : "contiene"

    ENCUENTRO ||--o{ SET : "tiene"
    ENCUENTRO ||--o{ SOLICITUD_APLAZAMIENTO : "gestiona"

    USUARIO {
        bigint id PK
        int elo
        string nombre UK
        string email
        text imagenPerfil
        string password
        date fechaNacimiento
        boolean eloProvisional
        string role
    }

    NOTIFICACION {
        bigint id PK
        bigint usuarioId FK
        string asunto
        string cuerpo
        boolean leido
        boolean pendienteDeAccion
        bigint referenciaId
        string tipo
        timestamp fechaCreacion
    }

    SOLICITUD {
        bigint id PK
        bigint candidato_id FK
        bigint decisor_id FK
        bigint equipo_id FK
        string estado
        string tipo_solicitud
        timestamp fecha_creacion
    }

    EQUIPO {
        bigint id PK
        string nombreEquipo UK
        string descripcion
        string estado
        bigint creador_id FK
        string codigo_equipo UK
    }

    EQUIPO_MIEMBROS {
        bigint equipo_id PK, FK
        bigint usuario_id PK, FK
    }

    TORNEO {
        bigint id PK
        bigint idOrganizador FK
        string nombre
        int numGrupos
        int equiposPorGrupo
        boolean tienePlayoff
        string estado
    }

    GRUPO {
        bigint id PK
        bigint idTorneo FK
        string nombreGrupo
    }

    INSCRIPCION {
        bigint id PK
        bigint idTorneo FK
        bigint idEquipo FK
        bigint idGrupo FK
        int partidosJugados
        string estadoInscripcion
        int puntosLiga
        int setsGanados
        int setsPerdidos
    }

    JORNADA {
        bigint id PK
        bigint idTorneo FK
        int numeroJornada
        string tipoFase
        string formatoJornada
        string estado
        date fechaInicio
        date fechaFin
    }

    ENCUENTRO {
        bigint id PK
        bigint idJornada FK
        bigint idEquipoLocal FK
        bigint idEquipoVisitante FK
        string estadoEncuentro
        datetime fechaRealizacion
    }

    SET {
        bigint id PK
        bigint idEncuentro FK
        int numeroSet
        int golesLocal
        int golesVisitante
    }

    SOLICITUD_APLAZAMIENTO {
        bigint id PK
        bigint idEncuentro FK
        bigint idEquipoSolicitante FK
        datetime fechaSolicitada
        string estado
    }
